loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:4: error: ';' expected but '{' found.
while(crossing()){
                 ^